# distributed-audio-pipeline

./: .gitignore  LICENSE  README.md
.github/workflows/: dockerhub-manual-push.yml  python-tests.yml
docs/: next-step.md  proposal.md
docs/diagrams/: diagrams.drawio
docs/report/: .gitignore  distributed-systems-final-report.tex
srcs/: docker-compose.yaml
srcs/api/: Dockerfile  pyproject.toml
srcs/api/app/: main.py
srcs/api/tests/: test_api.py
srcs/app/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml
srcs/app/api/routes/: __init__.py  upload.py
srcs/app/auth/: dependencies.py  jwt_handler.py  routes.py  service.py
srcs/app/infrastructure/: __init__.py  broker.py  database.py  metrics.py  storage.py
srcs/app/models/: __init__.py  audio_job.py  user.py
srcs/app/repositories/: __init__.py  job_repository.py
srcs/app/schemas/: __init__.py  job_schema.py
srcs/app/services/: __init__.py  audio_processor.py  job_service.py
srcs/app/tests/: test_api.py  test_auth.py
srcs/db/: init.sql
srcs/frontend/: README.md  app.js  index.html  styles.css
srcs/k8s/: README.md  values-kind.yaml
srcs/k8s/distributed-audio-pipeline/: Chart.yaml  values.yaml
srcs/k8s/distributed-audio-pipeline/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap-init-sql.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  minio-deployment.yaml  minio-service.yaml  persistentvolumeclaims.yaml  postgresql-deployment.yaml  postgresql-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  secret.yaml  worker-deployment.yaml  worker-metrics-service.yaml
srcs/k8s/kind/: kind-config.yaml
srcs/k8s/observability/: Chart.yaml  README.md  values-kind.yaml  values.yaml
srcs/k8s/observability/files/: alerts.yml  distributed-audio-overview.json  grafana-datasource.yml  prometheus.yml
srcs/k8s/observability/templates/: _helpers.tpl  grafana-configmaps.yaml  grafana-deployment.yaml  grafana-service.yaml  persistentvolumeclaims.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml
srcs/observability/: README.md  docker-compose.observability.yaml
srcs/observability/grafana/provisioning/dashboards/: dashboards.yml
srcs/scripts/: stress_uploads.sh  sync_k8s_assets.sh
srcs/worker/: Dockerfile  README.md  __init__.py  pyproject.toml  worker.py
srcs/worker/tests/: test_worker.py
