[tool.poetry]
name = "distributed-audio-pipeline-api"
version = "0.1.0"
description = "FastAPI service for distributed audio pipeline"
authors = ["Distributed Audio Pipeline Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.12"
uvicorn = { extras = ["standard"], version = "0.34.0" }
psycopg = { extras = ["binary"], version = "3.2.6" }
pika = "1.3.2"
minio = "7.2.15"
prometheus-client = "0.21.1"
python-multipart = "0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
